--- a/.devcontainer/dev-env/docker-compose.yml
+++ b/.devcontainer/dev-env/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     hostname: resourceful_tako_devenv
     environment:
       ENVIRONMENT: 'development'
+      DATABASE_URL: 'file:/config/dev.db'
     command: /bin/sh -c "while sleep 1000; do :; done"
     ports:
       - 7060:7060
@@ -23,8 +24,7 @@ services:
       - './.warprc:/home/node/.warprc:cached'
       - '/var/run/docker.sock:/var/run/docker.sock'
       - '~/docker/resourceful-tako/logs:/logs'
-      - '~/docker/resourceful-tako/artifacts:/artifacts'
-      - '~/docker/resourceful-tako/results:/results'
+      - '~/docker/resourceful-tako/config:/config'
     networks:
       default:
         aliases:
