--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   "scripts": {
     "dev": "next dev --port 7060",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start --port 7060",
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "5.14.0",
     "docker-compose": "0.24.8",
     "next": "14.2.3",
+    "prisma": "^5.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
