--- a/package.json
+++ b/package.json
@@ -32,27 +32,34 @@
     "format:fix": "prettier --write .",
     "lint:check": "next lint",
     "lint:fix": "next lint --fix",
-    "test:check": "echo 'tests will be added soon'",
+    "test:check": "vitest run --coverage",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
     "docker-compose": "0.24.8",
     "next": "14.2.3",
-    "prisma": "^5.14.0",
+    "prisma": "5.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@testing-library/react": "15.0.7",
     "@types/node": "20.13.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/supertest": "6.0.2",
+    "@vitejs/plugin-react": "4.3.0",
+    "@vitest/coverage-v8": "1.6.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "jsdom": "24.1.0",
     "postcss": "8.4.38",
     "prettier": "3.3.0",
     "prettier-plugin-tailwindcss": "0.6.1",
+    "supertest": "7.0.0",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vitest": "1.6.0"
   }
 }
