--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   "packageManager": "pnpm@9.1.4",
   "scripts": {
     "dev": "next dev --port 7060",
+    "dev:docker": "pnpm install --force && pnpm prisma migrate deploy && pnpm dev",
     "build": "next build",
-    "start": "next start --port 7060",
+    "start": "prisma migrate deploy && next start --port 7060",
+    "start:docker:prod": "docker-compose -f ./docker/prod/docker-compose.yaml up --build",
+    "start:docker:dev": "docker-compose -f ./docker/dev/docker-compose.yaml up",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint:check": "next lint",
