--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -21,8 +21,8 @@ jobs:
         uses: 'docker/build-push-action@v5'
         with:
           push: true
-          context: "."
-          file: "./docker/prod/Dockerfile"
+          context: '.'
+          file: './docker/prod/Dockerfile'
           labels:
             - 'org.opencontainers.image.source="https://github.com/${{ github.repository }}"'
           tags:
