--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,9 +1,9 @@
 name: 'Create release'
 on:
-  push: true
-  release:
-    types:
-      - 'published'
+  - 'push'
+  # release:
+  #   types:
+  #     - 'published'
 
 jobs:
   publish_to_container_registry:
