--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,9 +1,8 @@
 name: 'Create release'
 on:
-  - 'push'
-  # release:
-  #   types:
-  #     - 'published'
+  release:
+    types:
+      - 'published'
 
 jobs:
   publish_to_container_registry:
