--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "start:docker:dev": "docker-compose -f ./docker/dev/docker-compose.yaml up",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint:check": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test:check": "vitest run --coverage",
     "postinstall": "prisma generate"
   },
