--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
     "prisma": "5.15.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "swagger-ui-react": "^5.17.14",
+    "swagger-ui-react": "5.17.14",
+    "yaml": "2.4.5",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.0.3",
-    "@next/eslint-plugin-next": "^14.2.3",
+    "@eslint/compat": "1.0.3",
+    "@next/eslint-plugin-next": "14.2.3",
     "@testing-library/react": "16.0.0",
     "@types/node": "20.14.5",
     "@types/react": "18.3.3",
