--- a/.devcontainer/dev-env/docker-compose.yml
+++ b/.devcontainer/dev-env/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     hostname: resourceful_tako_devenv
     environment:
       ENVIRONMENT: 'development'
+      API_KEY: 'apikey'
       DATABASE_URL: 'file:/config/dev.db'
     command: /bin/sh -c "while sleep 1000; do :; done"
     ports:
