--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "private": false,
+  "type": "module",
   "author": {
     "email": "resourcefultako@joaovictor.com",
     "name": "João Victor",
@@ -41,6 +42,7 @@
   "dependencies": {
     "@prisma/client": "5.17.0",
     "docker-compose": "0.24.8",
+    "dotenv": "16.4.5",
     "next": "14.2.5",
     "next-swagger-doc": "0.4.0",
     "next-validations": "0.4.2",
@@ -74,6 +76,7 @@
     "tailwindcss": "3.4.6",
     "typescript": "5.5.3",
     "typescript-eslint": "7.16.1",
+    "vite-tsconfig-paths": "4.3.2",
     "vitest": "2.0.3"
   }
 }
