--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "format:fix": "prettier --write .",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test:check": "vitest run --coverage --maxWorkers 1 --minWorkers 1",
+    "test:check": "vitest run --coverage",
     "postinstall": "prisma generate"
   },
   "dependencies": {
