--- a/.github/workflows/branch_checks.yml
+++ b/.github/workflows/branch_checks.yml
@@ -14,6 +14,10 @@ jobs:
           node-version: 22
       - name: 'Set up Docker Buildx'
         uses: docker/setup-buildx-action@v2
+      - name: 'Install Docker Compose'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
       - name: 'Install pnpm'
         shell: 'sh'
         run: |
